<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#235E73"
        android:orientation="vertical"
        tools:context=".AddDetails">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:padding="14dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/tvDetailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleX="1.2"
                        android:src="@drawable/patna" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semibold"
                        android:letterSpacing="0.1"
                        android:text="Vehicle Details"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <Spinner
                        android:id="@+id/spinnersOfCars"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:entries="@array/cars" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semibold"
                        android:letterSpacing="0.1"
                        android:text="Add Specifiactions"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="#03A9F4"
                        android:orientation="vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="Make : "
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/makeTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="Vehicle Company Name"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="Model"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/modelNameTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="Enter Vehicle Model Name"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="@string/engine_cylinder_type"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/engineCylinderTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/engine_type"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="Number of Doors:"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/doorsTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/doors"
                            android:inputType="number"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="@string/price_range_hint"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/priceRangeTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/price_range"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="@string/color_hint"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/colorTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="@string/color"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="@string/year"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/modelTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="enter car manufacturing Year "
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="@string/condition"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="Used"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                   <!-- <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/regular"
                            android:lineSpacingExtra="1dp"
                            android:text="@string/date_sold_hint"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/dateOfSoldTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:hint="DD/MM/YYYY"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="100dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/saveDetailsBtn"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/white"
                            android:text="@string/save"
                            android:textColor="@color/white" />
                    </LinearLayout>


                </LinearLayout>


            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

    </LinearLayout>
</layout>

